tests/reference/asr-test_for2-e5d893f.stderr
semantic error: For loop increment type should be Integer.
 --> tests/errors/test_for2.py:3:5 - 4:16
  |
3 |        for i in range(0.0, 1.0, 0.4):
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
  |
4 |            print(i)
  | ...^^^^^^^^^^^^^^^^ 
